@@ -7,6 +7,10 @@ Package author: Mikhail Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V02-00-69
+2023-09-02 Mikhail Dubrovin
+- src/UtilsCalib.py - fix input parameter names to intlow, inthig, rmslow, rmshig
+
 Tag: V02-00-68
 2023-08-22 Mikhail Dubrovin
 - update doc/ChangeLog
